[package]
name = "chatgpt-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures = "0.3.25"
telegram-bot = "0.8.0"

reqwest = { version = "0.11.13", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
 
log = "0.4"
log4rs = "1.2.0"
